--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,5 @@
-# Preface {.unnumbered}
+# 들어가기 {.unnumbered #sec-preface}
 
-This is a Quarto book.
+R 언어를 이용하여 실무에서 데이터 분석을 하고 있다. 인터넷을 통해 쉽게 접할 수 있는 정례화된 내용으론 현업 문제를 해결하기에는 많은 어려움이 있다. 그때 그때 산발적으로 학습했던 내용을 정리하고자 한다.
 
-To learn more about Quarto books visit <https://quarto.org/docs/books>.
-
-```{r}
-1 + 1
-```
-
-자동 빌드 및 배포 동작 확인 중입니다 ~~~
+현업 문제를 해결하기 위해 급급했던 내용으로 효율성은 낮을 수 있으나 효과성은 확인된 내용이다. 
