--- a/clean.qmd
+++ b/clean.qmd
@@ -5,3 +5,20 @@
 > 80 percent of data science is cleaning the data and 20 percent is complaining about cleaning the data. - Kaggle founder and CEO Anthony Goldbloom
 
 결측치 처리, 이상치 처리, Feature Engineering 등 분석 목적에 맞는 데이터 구조를 갖추도록 작업해야 한다.
+
+## 결측치 처리
+
+R언어에서 결측치(missing value 또는 missing data)는 `NA`(Not Available)로 표기된다. 결측치는 다음과 같은 상황에서 발생할 수 있다.
+
+- `MCAR`(Missing Completely At Random) 관촬된 값을 입력 중 실수 또는 오류로 입력하지 못한 경우
+- `MAR`(Missing At Random) 값을 어떤 이유로든 관촬하지 못한 경우
+- `MNAR`(Missing At Not Random) 적절한 값이 입력을 하지 못한 경우
+
+### 결측치 제거
+
+### 결측치 대체
+
+
+## 이상치 처리
+
+
