--- a/identify.qmd
+++ b/identify.qmd
@@ -1,3 +1,11 @@
 # 문제정의 {#sec-identify}
 
-데이터 분석에 있어 가장 먼저 해야 하는 일은 해결해야 할 문제를 정의하는 것이다. 즉, 비니지스적인 문제를 데이터 분석에 적합한 문제로 변환하는 과정이 필요하다. 예를 들어, 어떻게 하면 불량률을 줄일 것인가 보다는 불량률과 주변 온도와는 관계가 있는가? 관계가 있다면 불량을 낮출을 수 있는 안정화된 온도는 몇도인가? 등으로 접근한다.
+데이터 분석에 있어 가장 먼저 해야 하는 일은 해결하고자 하는 `문제를 정의`하는 것이다. 이 때 문제를 어떻게 정의하느냐에 따라 수집해야 할 데이터 범위가 정해지고 분석 방향이 결정된다. 
+
+예를 들어 보자.
+
+> A공장 제품 생산 시 불량률을 5% 감소하자.
+
+어떻게 접근할 것인가? 비지스니 상황이나 분석가의 도메인 지식에 따라 다양한 형태로 접근방법이 나타날 것이다. 누군가는 자재 투입부터 불량을 줄이기 위해 입고 검사 데이터를 활용할 것이고, 누군가는 생산 과정에서 발생하는 불량을 줄이기 위해 각 단계별 검사 결과를 수집 분석할 것이다.
+
+이렇듯 문제 정의에 따라 수집할 수 있는 자료가 정해지고 그에 적합한 분석방법을 선택하게 된다.
