--- a/analyze.qmd
+++ b/analyze.qmd
@@ -1,3 +1,3 @@
-# 자료료분석 {#sec-anayze}
+# 자료분석 {#sec-anayze}
 
 정의된 문제와 그 범위에 따라 분석 유형을 정의한다. 데이터 분석 유형에는 DDA, EDA, CDA, PDA가 있으며 단순 기술통계 수준에서 값을 예측하는 형태까지 진행된다.
