--- a/clean.qmd
+++ b/clean.qmd
@@ -10,15 +10,21 @@
 
 R언어에서 결측치(missing value 또는 missing data)는 `NA`(Not Available)로 표기된다. 결측치는 다음과 같은 상황에서 발생할 수 있다.
 
-- `MCAR`(Missing Completely At Random) 관촬된 값을 입력 중 실수 또는 오류로 입력하지 못한 경우
-- `MAR`(Missing At Random) 값을 어떤 이유로든 관촬하지 못한 경우
-- `MNAR`(Missing At Not Random) 적절한 값이 입력을 하지 못한 경우
+-   `MCAR`(Missing Completely At Random) 관촬된 값을 입력 중 실수 또는 오류로 입력하지 못한 경우
+-   `MAR`(Missing At Random) 값을 어떤 이유로든 관촬하지 못한 경우
+-   `MNAR`(Missing At Not Random) 적절한 값이 입력을 하지 못한 경우
+
+현업에서 대부분 결측치는 MCAR, 즉 단순 실수나 순간적인 오류로 인해 값이 결측된다. 데이터가 충분한 경우는 고민없이 삭제할 수 있지만 데이터가 희소한 경우(불량 정보나 데이터 자체 획득이 어려운 경우) 적절한 값으로 대체하는 방법을 생각할 수 있다.
+
+R에서 결측치는 `NA`로 표시되며 `is.na()`통해 결측값을 확인할 수 있다.
+
+```{r}
+penguins <- palmerpenguins::penguins
+colSums(is.na(penguins))
+```
 
 ### 결측치 제거
 
 ### 결측치 대체
 
-
 ## 이상치 처리
-
-
